# appimage-install

./: Makefile  README.md  pyproject.toml
src/appimage_install/: __init__.py  cli.py
