[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "appimage-install"
version = "0.1.0"
description = "Install and manage AppImages"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
]

[project.scripts]
appimage-install = "appimage_install.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
